--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -49,7 +49,23 @@
     "enable": "Enable",
     "acceleratedDownloadDesc": "Uses multi-threading to accelerate downloads, but may increase server load",
     "autoRunDesc": "Automatically runs executable files after download (only for executable files)",
-    "autoExtractDesc": "Automatically extracts compressed files after download (supports common formats like zip, rar)"
+    "autoExtractDesc": "Automatically extracts compressed files after download (supports common formats like zip, rar)",
+    "systemInfo": "System Information",
+    "systemInfoDesc": "Current System Details",
+    "systemInfoDescription": "View detailed system information of the current runtime environment, including operating system, architecture, version and more",
+    "operatingSystem": "Operating System",
+    "systemArchitecture": "System Architecture",
+    "systemVersion": "System Version",
+    "systemType": "System Type",
+    "systemLanguage": "System Language",
+    "refresh": "Refresh System Info",
+    "refreshing": "Refreshing...",
+    "downloadDirectory": "Download Settings",
+    "downloadPath": "Download Directory",
+    "downloadPathDesc": "Set the location where downloaded files will be saved",
+    "currentDownloadPath": "Current Download Directory",
+    "selectDownloadDirectory": "Select Download Directory",
+    "refreshDownloadDirectory": "Refresh Download Directory"
   },
   "sourceManager": {
     "title": "Source Manager",
@@ -78,34 +94,27 @@
     "processError": "Failed to process file"
   },
   "downloadManager": {
-    "title": "Downloads",
-    "starting": "Starting download...",
+    "title": "Download Manager",
+    "addDownload": "Add Download",
     "downloading": "Downloading",
-    "completed": "Download completed",
-    "failed": "Download failed",
-    "canceled": "Download canceled",
-    "noDownloads": "No active downloads",
-    "downloadsInProgress": "downloads in progress",
-    "logsCleared": "Logs cleared",
-    "initialized": "Download manager initialized",
-    "settings": "Download Settings",
-    "autoRun": "Auto run after download",
-    "autoExtract": "Auto extract archives",
-    "clearLogs": "Clear logs",
-    "fileProcessing": "File Processing",
-    "extracting": "Extracting",
-    "extracted": "Extraction completed",
-    "running": "Running",
-    "processing": "Processing",
-    "acceleratedDownload": "Use multi-threaded accelerated download",
-    "analyzingFile": "Analyzing file",
-    "preparingDownload": "Preparing download",
-    "downloadingFile": "Downloading file",
-    "mergingChunks": "Merging file chunks",
-    "downloadSpeed": "Download speed",
-    "downloadProgress": "Download progress",
-    "threadCount": "Thread count",
-    "singleThreadFallback": "Single thread fallback"
+    "paused": "Paused",
+    "completed": "Completed",
+    "failed": "Failed",
+    "cancelled": "Cancelled",
+    "start": "Start",
+    "pause": "Pause",
+    "resume": "Resume",
+    "cancel": "Cancel",
+    "copy": "Copy",
+    "starting": "Starting Download",
+    "noDownloads": "No Downloads",
+    "status": "Status",
+    "progress": "Progress",
+    "speed": "Speed",
+    "size": "Size",
+    "open": "Open",
+    "openFile": "Open File",
+    "idle": "Idle"
   },
   "errors": {
     "fetchFailed": "Failed to fetch data",
@@ -125,4 +134,4 @@
     "expand": "Expand menu",
     "collapse": "Collapse menu"
   }
-} 
+}
