--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -1,1 +1,163 @@
- 
+{
+  "common": {
+    "search": "検索",
+    "cancel": "キャンセル",
+    "retry": "再試行",
+    "add": "追加",
+    "delete": "削除",
+    "save": "保存",
+    "loading": "読み込み中...",
+    "noResults": "結果が見つかりません",
+    "error": "エラー",
+    "success": "成功",
+    "edit": "編集"
+  },
+  "categories": {
+    "title": "カテゴリ",
+    "all": "すべてのアプリ",
+    "games": "ゲーム",
+    "utilities": "ユーティリティ",
+    "productivity": "生産性",
+    "development": "開発",
+    "education": "教育",
+    "entertainment": "エンターテイメント",
+    "ai": "AIモデル"
+  },
+  "settings": {
+    "title": "設定",
+    "appearance": "外観",
+    "theme": "テーマ",
+    "themeDesc": "アプリケーションの外観モードを変更",
+    "light": "ライト",
+    "dark": "ダーク",
+    "auto": "システム",
+    "language": "言語",
+    "languageDesc": "アプリケーションの言語を変更",
+    "background": "背景",
+    "backgroundImage": "背景画像",
+    "backgroundDesc": "アプリケーションの背景画像を選択",
+    "backgroundURL": "画像URLを入力",
+    "load": "読み込み",
+    "none": "なし",
+    "preset": "プリセット",
+    "opacity": "背景の不透明度",
+    "removeCustomBackground": "カスタム背景を削除",
+    "viewMode": "表示モード",
+    "viewModeDesc": "ストアでのアプリの表示方法を変更",
+    "grid": "グリッド",
+    "list": "リスト",
+    "enable": "有効",
+    "acceleratedDownloadDesc": "マルチスレッドを使用してダウンロードを高速化しますが、サーバー負荷が増加する可能性があります",
+    "autoRunDesc": "ダウンロード完了後に実行可能ファイルを自動実行（実行可能ファイルのみ）",
+    "autoExtractDesc": "ダウンロード完了後に圧縮ファイルを自動解凍（zip、rarなどの一般的な形式をサポート）",
+    "systemInfo": "システム情報",
+    "systemInfoDesc": "現在のシステム詳細情報",
+    "systemInfoDescription": "現在の実行環境のシステム情報を表示します。オペレーティングシステム、アーキテクチャ、バージョンなどの詳細情報が含まれます",
+    "operatingSystem": "オペレーティングシステム",
+    "systemArchitecture": "システムアーキテクチャ",
+    "systemVersion": "システムバージョン",
+    "systemType": "システムタイプ",
+    "systemLanguage": "システム言語",
+    "refresh": "システム情報を更新",
+    "refreshing": "更新中...",
+    "downloadDirectory": "ダウンロード設定",
+    "downloadPath": "ダウンロードディレクトリ",
+    "downloadPathDesc": "ダウンロードファイルの保存場所を設定",
+    "currentDownloadPath": "現在のダウンロードディレクトリ",
+    "selectDownloadDirectory": "ダウンロードディレクトリを選択",
+    "refreshDownloadDirectory": "ダウンロードディレクトリを更新"
+  },
+  "sourceManager": {
+    "title": "ソース管理",
+    "addSource": "ソースを追加してください",
+    "enterUrl": "ソースURLを入力",
+    "validating": "ソースを検証中...",
+    "invalidUrl": "無効なURL形式",
+    "invalidJson": "無効なJSON構造",
+    "duplicateSource": "ソースは既に存在します",
+    "sourceAdded": "ソースが正常に追加されました",
+    "sourceRemoved": "ソースが正常に削除されました",
+    "confirmDelete": "このソースを削除してもよろしいですか？",
+    "dragDropFiles": "JSONファイルをクリックまたはドラッグしてアップロード",
+    "githubSupport": "GitHubファイルリンクの直接入力をサポート、システムが自動的に生のコンテンツリンクに変換します",
+    "createNew": "新しいソースを作成",
+    "local": "ローカル",
+    "disable": "無効",
+    "enable": "有効",
+    "jsonEditor": "ソースJSONエディタ",
+    "saveAsSource": "ソースとして保存",
+    "returnToList": "ソースリストに戻る",
+    "noSources": "利用可能なソースがありません。ソースを追加してください。",
+    "uploadedSource": "アップロードされたソース",
+    "parseError": "JSONファイルの解析に失敗しました",
+    "readError": "ファイルの読み取りに失敗しました",
+    "processError": "ファイルの処理に失敗しました",
+    "processing": "ファイルを処理中です。しばらくお待ちください...",
+    "multipleSuccess": "複数のソースが正常に追加されました",
+    "partialSuccess": "一部のソースが正常に追加されました",
+    "allFailed": "すべてのソースの処理に失敗しました"
+  },
+  "downloadManager": {
+    "title": "ダウンロードマネージャー",
+    "addDownload": "ダウンロード追加",
+    "starting": "ダウンロード開始中...",
+    "downloading": "ダウンロード中",
+    "paused": "一時停止",
+    "completed": "ダウンロード完了",
+    "failed": "ダウンロード失敗",
+    "cancelled": "キャンセル",
+    "canceled": "ダウンロードがキャンセルされました",
+    "start": "開始",
+    "pause": "一時停止",
+    "resume": "再開",
+    "cancel": "キャンセル",
+    "copy": "コピー",
+    "noDownloads": "アクティブなダウンロードはありません",
+    "downloadsInProgress": "個のダウンロードが進行中",
+    "logsCleared": "ログがクリアされました",
+    "initialized": "ダウンロードマネージャーが初期化されました",
+    "settings": "ダウンロード設定",
+    "autoRun": "ダウンロード完了後に自動実行",
+    "autoExtract": "圧縮ファイルを自動解凍",
+    "clearLogs": "ログをクリア",
+    "fileProcessing": "ファイル処理",
+    "extracting": "解凍中",
+    "extracted": "解凍完了",
+    "running": "実行中",
+    "processing": "処理中",
+    "acceleratedDownload": "マルチスレッド高速ダウンロードを使用",
+    "analyzingFile": "ファイルを分析中",
+    "preparingDownload": "ダウンロードを準備中",
+    "downloadingFile": "ファイルをダウンロード中",
+    "mergingChunks": "ファイルチャンクを結合中",
+    "downloadSpeed": "ダウンロード速度",
+    "downloadProgress": "ダウンロード進行状況",
+    "threadCount": "スレッド数",
+    "singleThreadFallback": "シングルスレッドダウンロードフォールバック",
+    "status": "ステータス",
+    "progress": "進行状況",
+    "speed": "速度",
+    "size": "サイズ",
+    "open": "開く",
+    "openFile": "ファイルを開く",
+    "idle": "待機中"
+  },
+  "errors": {
+    "fetchFailed": "データの取得に失敗しました",
+    "networkError": "ネットワークエラー",
+    "unknownError": "不明なエラーが発生しました"
+  },
+  "app": {
+    "install": "インストール",
+    "download": "ダウンロード",
+    "version": "バージョン",
+    "size": "サイズ",
+    "developer": "開発者",
+    "description": "説明",
+    "noDescription": "説明がありません"
+  },
+  "sidebar": {
+    "expand": "メニューを展開",
+    "collapse": "メニューを折りたたむ"
+  }
+}
