--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -61,11 +61,26 @@
     "refresh": "Refresh System Info",
     "refreshing": "Refreshing...",
     "downloadDirectory": "Download Settings",
-    "downloadPath": "Download Directory",
-    "downloadPathDesc": "Set the location where downloaded files will be saved",
-    "currentDownloadPath": "Current Download Directory",
+    "downloadPath": "Download Path",
+    "downloadPathDesc": "Set the location where downloaded files are saved",
+    "currentDownloadPath": "Current Download Path",
     "selectDownloadDirectory": "Select Download Directory",
-    "refreshDownloadDirectory": "Refresh Download Directory"
+    "refreshDownloadDirectory": "Refresh Download Directory",
+    "downloadOptions": "Download Options",
+    "downloadOptionsDesc": "Configure download behavior and performance settings",
+    "useMultiThread": "Enable Multi-threaded Download",
+    "useMultiThreadDesc": "Use multi-threading technology to accelerate downloads and significantly improve download speed",
+    "threadCount": "Thread Count",
+    "threadCountDesc": "Number of concurrent download threads, recommended to set between 4-16",
+    "chunkSize": "Chunk Size",
+    "chunkSizeDesc": "Size of each download chunk (MB), affects memory usage and download efficiency",
+    "enableSpeedTest": "Enable Speed Test",
+    "enableSpeedTestDesc": "Test network speed before downloading to optimize download strategy",
+    "retryCount": "Retry Count",
+    "retryCountDesc": "Maximum number of retries when download fails",
+    "timeout": "Timeout",
+    "timeoutDesc": "Timeout for individual requests (seconds)",
+    "autoRun": "Auto-run after download"
   },
   "sourceManager": {
     "title": "Source Manager",
