--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -61,11 +61,26 @@
     "refresh": "システム情報を更新",
     "refreshing": "更新中...",
     "downloadDirectory": "ダウンロード設定",
-    "downloadPath": "ダウンロードディレクトリ",
+    "downloadPath": "ダウンロードパス",
     "downloadPathDesc": "ダウンロードファイルの保存場所を設定",
-    "currentDownloadPath": "現在のダウンロードディレクトリ",
+    "currentDownloadPath": "現在のダウンロードパス",
     "selectDownloadDirectory": "ダウンロードディレクトリを選択",
-    "refreshDownloadDirectory": "ダウンロードディレクトリを更新"
+    "refreshDownloadDirectory": "ダウンロードディレクトリを更新",
+    "downloadOptions": "ダウンロードオプション",
+    "downloadOptionsDesc": "ダウンロード動作とパフォーマンス設定を構成",
+    "useMultiThread": "マルチスレッドダウンロードを有効化",
+    "useMultiThreadDesc": "マルチスレッド技術を使用してダウンロードを高速化し、ダウンロード速度を大幅に向上",
+    "threadCount": "スレッド数",
+    "threadCountDesc": "同時ダウンロードスレッド数、4-16の間に設定することを推奨",
+    "chunkSize": "チャンクサイズ",
+    "chunkSizeDesc": "各ダウンロードチャンクのサイズ（MB）、メモリ使用量とダウンロード効率に影響",
+    "enableSpeedTest": "速度テストを有効化",
+    "enableSpeedTestDesc": "ダウンロード前にネットワーク速度をテストしてダウンロード戦略を最適化",
+    "retryCount": "リトライ回数",
+    "retryCountDesc": "ダウンロード失敗時の最大リトライ回数",
+    "timeout": "タイムアウト",
+    "timeoutDesc": "個別リクエストのタイムアウト（秒）",
+    "autoRun": "ダウンロード完了後に自動実行"
   },
   "sourceManager": {
     "title": "ソース管理",
