--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -24,7 +24,7 @@
     "ai": "AI大模型"
   },
   "settings": {
-    "title": "设置",
+    "title": "",
     "appearance": "外观",
     "theme": "主题",
     "themeDesc": "更改应用程序的外观模式",
@@ -61,11 +61,26 @@
     "refresh": "刷新系统信息",
     "refreshing": "刷新中...",
     "downloadDirectory": "下载设置",
-    "downloadPath": "下载目录",
-    "downloadPathDesc": "设置应用下载文件的保存位置",
-    "currentDownloadPath": "当前下载目录",
+    "downloadPath": "下载路径",
+    "downloadPathDesc": "设置下载文件的保存位置",
+    "currentDownloadPath": "当前下载路径",
     "selectDownloadDirectory": "选择下载目录",
-    "refreshDownloadDirectory": "刷新下载目录"
+    "refreshDownloadDirectory": "刷新下载目录",
+    "downloadOptions": "下载选项",
+    "downloadOptionsDesc": "配置下载行为和性能设置",
+    "useMultiThread": "启用多线程下载",
+    "useMultiThreadDesc": "使用多线程技术加速下载，可显著提高下载速度",
+    "threadCount": "线程数量",
+    "threadCountDesc": "同时下载的线程数，建议设置为4-16之间",
+    "chunkSize": "分块大小",
+    "chunkSizeDesc": "每个下载分块的大小（MB），影响内存使用和下载效率",
+    "enableSpeedTest": "启用速度测试",
+    "enableSpeedTestDesc": "下载前测试网络速度以优化下载策略",
+    "retryCount": "重试次数",
+    "retryCountDesc": "下载失败时的最大重试次数",
+    "timeout": "超时时间",
+    "timeoutDesc": "单个请求的超时时间（秒）",
+    "autoRun": "下载完成后自动运行"
   },
   "sourceManager": {
     "title": "软件源管理",
