--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -68,6 +68,20 @@
     "refreshDownloadDirectory": "Refresh Download Directory",
     "downloadOptions": "Download Options",
     "downloadOptionsDesc": "Configure download behavior and performance settings",
+    "autoRun": "Auto-run after download",
+    "autoRunDesc": "Automatically run executable files after download completion (for executable files only)",
+    "autoExtract": "Auto-extract after download",
+    "autoExtractDesc": "Automatically extract compressed files after download (supports zip, rar and other common formats)",
+    "showNotifications": "Show download notifications",
+    "showNotificationsDesc": "Display system notifications when downloads complete or fail",
+    "useProxy": "Use proxy",
+    "useProxyDesc": "Download through proxy server, suitable for restricted network environments",
+    "proxyUrl": "Proxy URL",
+    "proxyUrlDesc": "Complete proxy server address, format: http://host:port",
+    "timeout": "Timeout",
+    "timeoutDesc": "Timeout for individual requests (seconds)",
+    "retryCount": "Retry count",
+    "retryCountDesc": "Maximum number of retries when download fails",
     "useMultiThread": "Enable Multi-threaded Download",
     "useMultiThreadDesc": "Use multi-threading technology to accelerate downloads and significantly improve download speed",
     "threadCount": "Thread Count",
