--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -24,6 +24,20 @@
     "ai": "AIモデル"
   },
   "settings": {
+    "autoRun": "ダウンロード後自動実行",
+    "autoRunDesc": "ダウンロード完了後に実行可能ファイルを自動実行（実行可能ファイルのみ）",
+    "autoExtract": "ダウンロード後自動解凍",
+    "autoExtractDesc": "ダウンロード完了後に圧縮ファイルを自動解凍（zip、rarなどの一般的な形式をサポート）",
+    "showNotifications": "ダウンロード通知を表示",
+    "showNotificationsDesc": "ダウンロード完了または失敗時にシステム通知を表示",
+    "useProxy": "プロキシを使用",
+    "useProxyDesc": "プロキシサーバー経由でダウンロード、制限されたネットワーク環境に適用",
+    "proxyUrl": "プロキシアドレス",
+    "proxyUrlDesc": "プロキシサーバーの完全なアドレス、形式：http://host:port",
+    "timeout": "タイムアウト",
+    "timeoutDesc": "個別リクエストのタイムアウト時間（秒）",
+    "retryCount": "再試行回数",
+    "retryCountDesc": "ダウンロード失敗時の最大再試行回数",
     "title": "設定",
     "appearance": "外観",
     "theme": "テーマ",
