--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -24,20 +24,6 @@
     "ai": "AIモデル"
   },
   "settings": {
-    "autoRun": "ダウンロード後自動実行",
-    "autoRunDesc": "ダウンロード完了後に実行可能ファイルを自動実行（実行可能ファイルのみ）",
-    "autoExtract": "ダウンロード後自動解凍",
-    "autoExtractDesc": "ダウンロード完了後に圧縮ファイルを自動解凍（zip、rarなどの一般的な形式をサポート）",
-    "showNotifications": "ダウンロード通知を表示",
-    "showNotificationsDesc": "ダウンロード完了または失敗時にシステム通知を表示",
-    "useProxy": "プロキシを使用",
-    "useProxyDesc": "プロキシサーバー経由でダウンロード、制限されたネットワーク環境に適用",
-    "proxyUrl": "プロキシアドレス",
-    "proxyUrlDesc": "プロキシサーバーの完全なアドレス、形式：http://host:port",
-    "timeout": "タイムアウト",
-    "timeoutDesc": "個別リクエストのタイムアウト時間（秒）",
-    "retryCount": "再試行回数",
-    "retryCountDesc": "ダウンロード失敗時の最大再試行回数",
     "title": "設定",
     "appearance": "外観",
     "theme": "テーマ",
@@ -75,26 +61,11 @@
     "refresh": "システム情報を更新",
     "refreshing": "更新中...",
     "downloadDirectory": "ダウンロード設定",
-    "downloadPath": "ダウンロードパス",
+    "downloadPath": "ダウンロードディレクトリ",
     "downloadPathDesc": "ダウンロードファイルの保存場所を設定",
-    "currentDownloadPath": "現在のダウンロードパス",
+    "currentDownloadPath": "現在のダウンロードディレクトリ",
     "selectDownloadDirectory": "ダウンロードディレクトリを選択",
-    "refreshDownloadDirectory": "ダウンロードディレクトリを更新",
-    "downloadOptions": "ダウンロードオプション",
-    "downloadOptionsDesc": "ダウンロード動作とパフォーマンス設定を構成",
-    "useMultiThread": "マルチスレッドダウンロードを有効化",
-    "useMultiThreadDesc": "マルチスレッド技術を使用してダウンロードを高速化し、ダウンロード速度を大幅に向上",
-    "threadCount": "スレッド数",
-    "threadCountDesc": "同時ダウンロードスレッド数、4-16の間に設定することを推奨",
-    "chunkSize": "チャンクサイズ",
-    "chunkSizeDesc": "各ダウンロードチャンクのサイズ（MB）、メモリ使用量とダウンロード効率に影響",
-    "enableSpeedTest": "速度テストを有効化",
-    "enableSpeedTestDesc": "ダウンロード前にネットワーク速度をテストしてダウンロード戦略を最適化",
-    "retryCount": "リトライ回数",
-    "retryCountDesc": "ダウンロード失敗時の最大リトライ回数",
-    "timeout": "タイムアウト",
-    "timeoutDesc": "個別リクエストのタイムアウト（秒）",
-    "autoRun": "ダウンロード完了後に自動実行"
+    "refreshDownloadDirectory": "ダウンロードディレクトリを更新"
   },
   "sourceManager": {
     "title": "ソース管理",
