--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -21,7 +21,6 @@
     "development": "开发",
     "education": "教育",
     "entertainment": "娱乐",
-    "settings.downloads": "设置",
     "ai": "AI大模型"
   },
   "settings": {
@@ -62,33 +61,11 @@
     "refresh": "刷新系统信息",
     "refreshing": "刷新中...",
     "downloadDirectory": "下载设置",
-    "downloadPath": "下载路径",
-    "downloadPathDesc": "设置下载文件的保存位置",
-    "currentDownloadPath": "当前下载路径",
+    "downloadPath": "下载目录",
+    "downloadPathDesc": "设置应用下载文件的保存位置",
+    "currentDownloadPath": "当前下载目录",
     "selectDownloadDirectory": "选择下载目录",
-    "refreshDownloadDirectory": "刷新下载目录",
-    "downloadOptions": "下载选项",
-    "downloadOptionsDesc": "配置下载行为和性能设置",
-    "useMultiThread": "启用多线程下载",
-    "useMultiThreadDesc": "使用多线程技术加速下载，可显著提高下载速度",
-    "threadCount": "线程数量",
-    "threadCountDesc": "同时下载的线程数，建议设置为4-16之间",
-    "chunkSize": "分块大小",
-    "chunkSizeDesc": "每个下载分块的大小（MB），影响内存使用和下载效率",
-    "enableSpeedTest": "启用速度测试",
-    "enableSpeedTestDesc": "下载前测试网络速度以优化下载策略",
-    "retryCount": "重试次数",
-    "retryCountDesc": "下载失败时的最大重试次数",
-    "timeout": "超时时间",
-    "timeoutDesc": "单个请求的超时时间（秒）",
-    "autoRun": "下载完成后自动运行",
-    "autoExtract": "下载完成后自动解压",
-    "showNotifications": "显示下载通知",
-    "showNotificationsDesc": "下载完成或失败时显示系统通知",
-    "useProxy": "使用代理",
-    "useProxyDesc": "通过代理服务器进行下载，适用于网络受限环境",
-    "proxyUrl": "代理地址",
-    "proxyUrlDesc": "代理服务器的完整地址，格式：http://host:port"
+    "refreshDownloadDirectory": "刷新下载目录"
   },
   "sourceManager": {
     "title": "软件源管理",
