--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -61,40 +61,11 @@
     "refresh": "Refresh System Info",
     "refreshing": "Refreshing...",
     "downloadDirectory": "Download Settings",
-    "downloadPath": "Download Path",
-    "downloadPathDesc": "Set the location where downloaded files are saved",
-    "currentDownloadPath": "Current Download Path",
+    "downloadPath": "Download Directory",
+    "downloadPathDesc": "Set the location where downloaded files will be saved",
+    "currentDownloadPath": "Current Download Directory",
     "selectDownloadDirectory": "Select Download Directory",
-    "refreshDownloadDirectory": "Refresh Download Directory",
-    "downloadOptions": "Download Options",
-    "downloadOptionsDesc": "Configure download behavior and performance settings",
-    "autoRun": "Auto-run after download",
-    "autoRunDesc": "Automatically run executable files after download completion (for executable files only)",
-    "autoExtract": "Auto-extract after download",
-    "autoExtractDesc": "Automatically extract compressed files after download (supports zip, rar and other common formats)",
-    "showNotifications": "Show download notifications",
-    "showNotificationsDesc": "Display system notifications when downloads complete or fail",
-    "useProxy": "Use proxy",
-    "useProxyDesc": "Download through proxy server, suitable for restricted network environments",
-    "proxyUrl": "Proxy URL",
-    "proxyUrlDesc": "Complete proxy server address, format: http://host:port",
-    "timeout": "Timeout",
-    "timeoutDesc": "Timeout for individual requests (seconds)",
-    "retryCount": "Retry count",
-    "retryCountDesc": "Maximum number of retries when download fails",
-    "useMultiThread": "Enable Multi-threaded Download",
-    "useMultiThreadDesc": "Use multi-threading technology to accelerate downloads and significantly improve download speed",
-    "threadCount": "Thread Count",
-    "threadCountDesc": "Number of concurrent download threads, recommended to set between 4-16",
-    "chunkSize": "Chunk Size",
-    "chunkSizeDesc": "Size of each download chunk (MB), affects memory usage and download efficiency",
-    "enableSpeedTest": "Enable Speed Test",
-    "enableSpeedTestDesc": "Test network speed before downloading to optimize download strategy",
-    "retryCount": "Retry Count",
-    "retryCountDesc": "Maximum number of retries when download fails",
-    "timeout": "Timeout",
-    "timeoutDesc": "Timeout for individual requests (seconds)",
-    "autoRun": "Auto-run after download"
+    "refreshDownloadDirectory": "Refresh Download Directory"
   },
   "sourceManager": {
     "title": "Source Manager",
