--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -50,6 +50,10 @@
     "acceleratedDownloadDesc": "Uses multi-threading to accelerate downloads, but may increase server load",
     "autoRunDesc": "Automatically runs executable files after download (only for executable files)",
     "autoExtractDesc": "Automatically extracts compressed files after download (supports common formats like zip, rar)",
+    "autoRunAfterDownload": "Auto Run After Download",
+    "autoRunAfterDownloadDesc": "When enabled, automatically runs the installer after download completes",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
     "systemInfo": "System Information",
     "systemInfoDesc": "Current System Details",
     "systemInfoDescription": "View detailed system information of the current runtime environment, including operating system, architecture, version and more",
