--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -50,6 +50,10 @@
     "acceleratedDownloadDesc": "使用多线程加速下载，可提高下载速度，但可能增加服务器负载",
     "autoRunDesc": "下载完成后自动运行可执行文件（仅适用于可执行文件）",
     "autoExtractDesc": "下载完成后自动解压压缩文件（支持zip、rar等常见格式）",
+    "autoRunAfterDownload": "下载完成后自动运行",
+    "autoRunAfterDownloadDesc": "启用后，下载完成时会自动运行安装程序",
+    "enabled": "已启用",
+    "disabled": "已禁用",
     "systemInfo": "系统信息",
     "systemInfoDesc": "当前系统详细信息",
     "systemInfoDescription": "查看当前运行环境的系统信息，包括操作系统、架构、版本等详细信息",
