--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -50,6 +50,10 @@
     "acceleratedDownloadDesc": "マルチスレッドを使用してダウンロードを高速化しますが、サーバー負荷が増加する可能性があります",
     "autoRunDesc": "ダウンロード完了後に実行可能ファイルを自動実行（実行可能ファイルのみ）",
     "autoExtractDesc": "ダウンロード完了後に圧縮ファイルを自動解凍（zip、rarなどの一般的な形式をサポート）",
+    "autoRunAfterDownload": "ダウンロード完了後の自動実行",
+    "autoRunAfterDownloadDesc": "有効にすると、ダウンロード完了時にインストーラーが自動実行されます",
+    "enabled": "有効",
+    "disabled": "無効",
     "systemInfo": "システム情報",
     "systemInfoDesc": "現在のシステム詳細情報",
     "systemInfoDescription": "現在の実行環境のシステム情報を表示します。オペレーティングシステム、アーキテクチャ、バージョンなどの詳細情報が含まれます",
